<resources>
    <string name="app_name">Bottom Navigation View</string>
    <string name="action_settings">Settings</string>
    <string name="text_home">Home</string>
    <string name="text_profile">Profile</string>
    <string name="text_settings">Settings</string>
    <string name="text_more">More</string>
    <string name="text_navigation">Navigation</string>
    <string name="text_quran">Quran</string>
    <string name="text_other">other</string>
    <string name="title_home">My Application</string>
    <string name="title_today">Today</string>
    <string name="title_dua">Dua</string>
    <string name="title_quran">Quran</string>
    <string name="title_qibla">Qibla</string>
    <string name="title_more">More</string>
    <string name="text_download">Download</string>
    <string name="text_Evening_button">EVENING</string>
    <string name="text_Morning_button">MORNING</string>
    <string name="unknown">Unknown</string>
    <string name="Pray">Pray</string>
    <string name="Isnow"> is now</string>
    <string name="NotificationforPray"> Notification for Pray</string>
</resources>