<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_start_page"
        android:icon="@drawable/ic_today"
        android:title="@string/title_today"/>

    <item
        android:id="@+id/navigation_dua"
        android:icon="@drawable/ic_person"
        android:title="@string/title_dua"/>

    <item
        android:id="@+id/navigation_quran"
        android:icon="@drawable/ic_book"
        android:title="@string/title_quran"/>

    <item
        android:id="@+id/navigation_qibla"
        android:icon="@drawable/ic_compass"
        android:title="@string/title_qibla"/>

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more"
        android:title="@string/title_more"/>
</menu>